# deadbug

./: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
common/src/hal/: gpio.rs  mod.rs
common/src/protocol/: channels.rs  gpio.rs  mod.rs
firmware/: Cargo.toml  bmp.gdb
firmware/.cargo/: config
firmware/src/: app.rs  cobs.rs  cobs_rx.rs  cobs_tx.rs  command_processor.rs  dumb_serial.rs  main.rs  packet_processor.rs  smart_serial.rs
firmware/src/targets/: f3_disco.rs  mod.rs
software/: Cargo.toml
software/src/: main.rs
stm32-log/: Cargo.toml
stm32-log/src/: f3_discovery.rs  lib.rs  log.rs
