[package]
name = "deadbug-cli"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
libusb = "0.3.0"
serialport = "3.3.0"
rand = "0.7.0"
cobs = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
ssmarshal = "1.0.0"
deadbug-common = { path = "../common" }
